spec/task3/03_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-3-svc
  namespace: task-3
spec:
  selector:
    app: testapp-3
    type: go-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
