spec/task3/20_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-3-ingress
  namespace: task-3
spec:
  rules:
    - host: testapp3.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: testapp-3-svc
                port:
                  number: 8081
